--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,19 +4,20 @@ version: 1.0.0
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.18.5 <3.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 # dependencies:
 #   path: ^1.8.0
 
 dev_dependencies:
   lints: ^2.0.0
-  packagex: ^0.0.29
+  packagex: ^0.0.50
   test: ^1.16.0
 dependencies:
-  galaxeus_lib: ^0.0.89
-  mason_logger: ^0.2.8
-  path: ^1.8.3
+  # galaxeus_lib: ^0.0.89
+  general_lib: ^0.0.36
+  mason_logger: ^0.2.15
+  path: ^1.9.0
 
 executables:
   chrome_multi: chrome_multi
