--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,3 +16,5 @@ executables:
 publish_to: 'none'
 dependency_overrides: 
   pointycastle: '3.8.0'
+funding: 
+  - 'https://github.com/sponsors/azkadev'
