--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@ docs/canvaskit
 /build/
 generate_glx_*
 node_modules/
+ephemeral/
+flutter/ephemeral
+android/.gradle
+android/flutter/ephemeral
+linux/flutter/ephemeral
+macos/Flutter/ephemeral
+windows/ephemeral
